# zfabric_tools

./: README.md  pyproject.toml
extract/: confluence.py  github.py  rss.py  yt.py
extract/reddit/: reddit.py
extract/web/: __init__.py  __main__.py  common.py  exceptions.py  extractor.py  jina.py  requirements.txt  web.py
save/: joplin.py
src/tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tools/extract/: confluence.py  github.py  yt.py
src/tools/extract/reddit/: __main__.py  reddit.py
src/tools/extract/web/: __init__.py  __main__.py  exceptions.py  extractor.py
src/tools/save/: joplin.py
tests/: test_web_extractor.py
